src/objects/S_D_Data__c.object
<CustomObject>
    <description>Child object to parent Suspension and Debarment Cases object’s Respondent records. Every &quot;Action&quot; and every &quot;Grounds for Debarment/Reason&quot; will have a record of this object type related to the Respondent record.</description>
    <fields>
        <fullName>Action_Reason__c</fullName>
        <description>Contains all the full action names that should be included on reports and all the full Grounds for Debarment that get included on reports.</description>
        <inlineHelpText>Contains all the full action names that should be included on reports and all the full Grounds for Debarment that get included on reports.</inlineHelpText>
        <label>SDO Actions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bribery / Conspiracy to Commit Bribery</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>Conspiracy, General</fullName>
                    <color>#990000</color>
                </value>
                <value>
                    <fullName>False Statements</fullName>
                    <color>#66FF99</color>
                </value>
                <value>
                    <fullName>Falsification or Destruction of Records</fullName>
                    <color>#6600CC</color>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                    <color>#33CCFF</color>
                </value>
                <value>
                    <fullName>Hobbs Act Conspiracy</fullName>
                    <color>#FF9966</color>
                </value>
                <value>
                    <fullName>Mail Fraud</fullName>
                    <color>#66FFFF</color>
                </value>
                <value>
                    <fullName>Tax Violations</fullName>
                    <color>#66FF99</color>
                </value>
                <value>
                    <fullName>Theft</fullName>
                    <color>#9999FF</color>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#FF99FF</color>
                </value>
                <value>
                    <fullName>Lead Agency Transfers</fullName>
                    <color>#0B24BE</color>
                </value>
                <value>
                    <fullName>Requests for Information</fullName>
                    <color>#A845DC</color>
                </value>
                <value>
                    <fullName>Show Cause Letters</fullName>
                    <color>#33FF33</color>
                </value>
                <value>
                    <fullName>Suspensions</fullName>
                    <color>#FFCC66</color>
                </value>
                <value>
                    <fullName>Proposals for Debarment</fullName>
                    <color>#FF9966</color>
                </value>
                <value>
                    <fullName>Hearings</fullName>
                    <color>#FF0000</color>
                </value>
                <value>
                    <fullName>Terminations</fullName>
                    <color>#9999FF</color>
                </value>
                <value>
                    <fullName>Debarments</fullName>
                    <color>#996633</color>
                </value>
                <value>
                    <fullName>No Actions</fullName>
                    <color>#66FFFF</color>
                </value>
                <value>
                    <fullName>Administrative Compliance Agreements</fullName>
                    <color>#006600</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Government_Fiscal_Year__c</fullName>
        <description>Fiscal year of the action for each record where the category is action.</description>
        <inlineHelpText>Fiscal year of the action for each record where the category is action.</inlineHelpText>
        <label>Government Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Category__c</fullName>
        <description>SDO Actions or (Grounds for Debarment) Reason of the record.</description>
        <inlineHelpText>SDO Actions or (Grounds for Debarment) Reason of the record.</inlineHelpText>
        <label>Report Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Reason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Respondent_ID__c</fullName>
        <description>Master-Detail Relationship with Suspension and Debarment Case&apos;s Respondent Records.</description>
        <inlineHelpText>Master-Detail Relationship with Suspension and Debarment Case&apos;s Respondent Records.</inlineHelpText>
        <label>Respondent ID</label>
        <referenceTo>Suspension_and_Debarment_Case__c</referenceTo>
        <relationshipLabel>S&amp;D Data</relationshipLabel>
        <relationshipName>S_D_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>S&amp;D Data</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>S&amp;D Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S&amp;D Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>